fixed spacing below navigation sections in right-hand nav list

--- a/web/media/css/main.css
+++ b/web/media/css/main.css
@@ -2097,7 +2097,8 @@ ul.user_menu li {
 
 #divMenu .main_menu, #divMenu .sub_menu, #divMenu form {
 	border-bottom: solid 1px #ccc;
-	padding-bottom: 1em;
+	padding-bottom: 10px;
+	margin-bottom: 10px;
 }
 
 #divMenu ul li {
